GNOME Bugzilla – Bug 756870
Don't disable assertions for releases and provide a new GST_ENABLE_EXTRA_CHECKS #define
Last modified: 2015-10-21 11:37:42 UTC
See commit message
Created attachment 313749 [details] [review] Don't disable assertions for releases and provide a new GST_ENABLE_EXTRA_CHECKS #define Assertions are useful to have in any case, and we were abusing the #define for adding extra checks to our code. Let's do it properly!
Created attachment 313750 [details] [review] Use new GST_ENABLE_EXTRA_CHECKS #define
+1
Review of attachment 313749 [details] [review]: Looks good.
Review of attachment 313750 [details] [review]: Looks good. Probably need to check all the modules for this then.
I did, no other are using G_DISABLE_ASSERT like this :) But I'll add the configure parameter to all of them nonetheless. Pushing later.
Comment on attachment 313749 [details] [review] Don't disable assertions for releases and provide a new GST_ENABLE_EXTRA_CHECKS #define commit b99800a301ce85262a9e33e17d5a137610375c24 Author: Sebastian Dröge <sebastian@centricular.com> Date: Tue Oct 20 17:28:22 2015 +0300 Don't disable assertions for releases and provide a new GST_ENABLE_EXTRA_CHECKS #define Assertions are useful to have in any case, and we were abusing the #define for adding extra checks to our code. Let's do it properly! https://bugzilla.gnome.org/show_bug.cgi?id=756870
Comment on attachment 313750 [details] [review] Use new GST_ENABLE_EXTRA_CHECKS #define commit 1efb4511542446b3c9e5b199fb2278236e559538 Author: Sebastian Dröge <sebastian@centricular.com> Date: Tue Oct 20 17:29:42 2015 +0300 Use new GST_ENABLE_EXTRA_CHECKS #define https://bugzilla.gnome.org/show_bug.cgi?id=756870